# resume_ocr

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: sample_resume.txt
resume_agent/: __init__.py  agent.py  api.py  cli.py  db.py  extractors.py  llm.py  mcp_server.py  models.py  parser.py  workflow.py
tests/: test_resume_agent.py
tools/doc_builders/: build_agent_business_doc.py
