[project]
name = "jianli-ocr"
version = "0.1.0"
description = "Resume parsing agent for extracting structured candidate data from resumes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
]
mcp = [
  "mcp>=1.2.0",
]
full = [
  "fastapi>=0.111.0",
  "mcp>=1.2.0",
  "pdfplumber>=0.11.0",
  "python-multipart>=0.0.9",
  "python-docx>=1.1.0",
  "pillow>=10.0.0",
  "pytesseract>=0.3.10",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
resume-agent = "resume_agent.cli:main"
resume-agent-mcp = "resume_agent.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
